# llng-pam-module

./: CMakeLists.txt  README.md  SECURITY.md  presentation.md
config/: openbastion.conf.example
debian/: changelog  config  control  copyright  postinst  postrm  rules  templates
doc/: admin-guide.md  bastion-architecture.md  competitors.md  session-recording.md
docker/: README.md  docker-compose.yml  lmConf-1.json
docker-demo-cert/: README.md  docker-compose.yml  lmConf-1.json
docker-demo-token/: README.md  docker-compose.yml  lmConf-1.json
include/: bastion_jwt.h  config.h  jwks_cache.h  jwt_utils.h  llng_client.h  ob_client.h  str_utils.h  token_cache.h  token_manager.h
man/: llng-backend-setup.8  llng-bastion-setup.8  llng-pam-enroll.8  llng-ssh-cert.1  llng-ssh-proxy.1  ob-backend-setup.8  ob-bastion-setup.8  ob-enroll.8  ob-heartbeat.8  ob-session-recorder.8  ob-ssh-cert.1  ob-ssh-proxy.1
nss/: CMakeLists.txt  libnss_llng.c
rpm/: open-bastion.spec  pam-llng.spec
scripts/: llng-pam-enroll  llng-session-recorder  llng-ssh-proxy  ob-enroll  ob-ssh-proxy  session-recorder.conf.example  ssh-proxy.conf.example
src/: audit_log.c  auth_cache.c  bastion_jwt.c  client_context.c  config.c  crowdsec.c  jti_cache.c  jwks_cache.c  jwt_utils.c  llng_client.c  notify.c  ob_client.c  pam_llng.c  pam_openbastion.c  rate_limiter.c  secret_store.c  service_account.c  str_utils.c  token_cache.c  token_manager.c
tests/: CMakeLists.txt  test_auth_cache.c  test_bastion_jwt.c  test_config.c  test_crowdsec.c  test_integration_docker.sh  test_llng_client.c  (+4 more)
(+25 files in other folders)
